In Progress - Home page modified according to mockup

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -251,7 +251,7 @@ html, body {
 .mdl-demo .mdl-menu__container {
   z-index: 99;
 }
-.bg-white {
-  background: #fff;
-  color: #000;
+.code-review-section {
+  display: inline-block;
+  text-align: center;
 }
