Fixed tables size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,6 +258,9 @@ html, body {
   display: inline-block;
   text-align: center;
 }
+.device-table {
+  width: 100%;
+}
 .device-table tr th {
   text-align: center;
 }
